重新实现WebView中console功能